; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/core/extr_usb.c_usb_devnode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/core/extr_usb.c_usb_devnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.usb_device = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"bus/usb/%03d/%03d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.device*, i32*)* @usb_devnode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @usb_devnode(%struct.device* %0, i32* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.usb_device*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.device*, %struct.device** %3, align 8
  %7 = call %struct.usb_device* @to_usb_device(%struct.device* %6)
  store %struct.usb_device* %7, %struct.usb_device** %5, align 8
  %8 = load i32, i32* @GFP_KERNEL, align 4
  %9 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %10 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.usb_device*, %struct.usb_device** %5, align 8
  %15 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i8* @kasprintf(i32 %8, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %16)
  ret i8* %17
}

declare dso_local %struct.usb_device* @to_usb_device(%struct.device*) #1

declare dso_local i8* @kasprintf(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
